--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,44 +1,63 @@
-html{
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
-*, 
-*::before, 
-*::after{
-  box-sizing: inherit;
-  -webkit-box-sizing: inherit;
-}
+@import 'vars';
+@import 'global';
+@import 'fonts';
 
-*{
-  padding: 0;
-  margin: 0;
-  border: 0;
+
+.header__top-inner{
+  display: flex;
+  justify-content: space-between;
+  height: 90px;
+  align-items: center;
 }
 
-:focus,:active{outline:none}
-a:focus, a:active{outline: none;}
-
-nav,footer,header,aside{display: block;}
-
-html,body{
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 100%;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+.header__text{
+  line-height: 1.6;
+  margin-left: auto;
+  margin-right: 50px;
+  span{
+    color: $red;
+  }
 }
-input,button,textarea{font-family: inherit;}
 
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
+.header__btn{
+  display: inline-block;
+  width: 100px;
+  padding: 4px;
+  border-radius: 4px;
+  text-align: center;
+  color: #fff;
+  font-size: 12px;
+  line-height: 2;
+}
 
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
-// Обнуление стилей.
+.header__btn-login{
+  background-color: $green;
+}
+
+.header__btn-register{
+  background-color: $red;
+  margin-left: 7px;
+}
+
+.header__menu{
+  background-color: $bg;
+}
+
+.menu{
+  height: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.menu__list{
+  li{
+    display: inline-block;
+    & + li{
+      margin-left: 28px;
+    }
+  }
+  a{
+    color: #fff;
+    font-size: 14px;
+  }
+}
