--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -61,3 +61,62 @@
     font-size: 14px;
   }
 }
+
+
+// search
+
+.search{
+  background-color: $bgi;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 532px;
+}
+
+.search__inner{
+  color: #fff;
+  padding: 155px 0 100px;
+  text-align: center;
+  line-height: 1.5;
+  &-title{
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+  &-text{
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 50px;
+  }
+  &-form{
+    max-width: 670px;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    input{
+      height: 56px;
+      width: 100%;
+      font-size: 14px;
+      line-height: 2;
+      padding-left: 25px;
+      padding-right: 60px;
+      display: block;
+      box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+      border-radius: 4px;
+      &::placeholder{
+        color: #90a4ae;
+        font-weight: 500;
+      }
+    }
+    button{
+      width: 20px;
+      height: 20px;
+      position: absolute;
+      border: none;
+      background-color: transparent;
+      right: 20px;
+      top: 17px;
+      outline: none;
+    }
+  }
+}
