--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -58,3 +58,24 @@ a{
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.container-fluid{
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+@media (max-width: 720px){
+  .container-fluid{
+    padding: 0 15px;
+  }
+}
+
+.title{
+  text-align: center;
+  margin-bottom: 30px;
+  color: $bg;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.66666;
+}
