--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -86,12 +86,12 @@
   line-height: 1.5;
   &-title{
     font-size: 48px;
-    font-weight: 700;
+    @include f700;
     margin-bottom: 10px;
   }
   &-text{
     font-size: 20px;
-    font-weight: 500;
+    @include f500;
     margin-bottom: 50px;
   }
   &-form{
@@ -113,7 +113,7 @@
       border-radius: 4px;
       &::placeholder{
         color: #90a4ae;
-        font-weight: 500;
+        @include f500;
       }
     }
     button{
@@ -188,7 +188,7 @@ button{
 
     padding: 10px 30px;
 
-    font-weight: 500;
+    @include f500;
 
     border-bottom: 1px solid #e7ecf2;
   }
@@ -208,7 +208,7 @@ button{
   }
   &-price{
     font-size: 20px;
-    font-weight: 700;
+    @include f700;
   }
   &-info{
     min-height: 70px;
@@ -234,7 +234,7 @@ button{
     }
     &-span{
       font-size: 14px;
-      font-weight: 500;
+      @include f500;
     }
   }
   &-star{
@@ -292,3 +292,59 @@ button{
   }
 }
 // PRODUCTS END SLIDER
+// ADVANTAGES
+
+.advantages{
+  background-color: $bg;
+  padding: 110px 0;
+}
+
+.advantages__title{
+  color: #fff;
+}
+
+.advantages__inner{
+  display: flex;
+  justify-content: space-between;
+}
+
+.advantages__item{
+  max-width: 370px;
+  text-align: center;
+  padding: 0px 10px;
+  &:hover{
+    .advantages__item-images{
+      background-color: $green;
+    }
+      g{
+        fill: #fff;
+      }
+    .advantages__item-title{
+      color: $green;
+    }
+  }
+  &-images{
+    width: 114px;
+    height: 114px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto 30px;
+    transition: .2s linear;
+  }
+  &-title{
+    font-size: 24px;
+    margin-bottom: 25px;
+    color: #fff;
+    @include f500;
+    transition: .2s linear;
+  }
+  &-text{
+    line-height: 1.6;
+  }
+}
+
+
+// END ADVANTAGES
