--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,3 +4,13 @@ $green: #8bc34a;
 $bg: #263238;
 $bgi: #b5b5b5;
 $gray: #f4f6f5;
+
+@mixin f500 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+
+@mixin f700 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+}
