--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -50,6 +50,7 @@
 
 .menu{
   height: 60px;
+
   display: flex;
   align-items: center;
 }
@@ -64,6 +65,10 @@
   a{
     color: #fff;
     font-size: 14px;
+    transition: .2s linear;
+    &:hover{
+    color: $green;
+    }
   }
 }
 
@@ -81,9 +86,11 @@
 
 .search__inner{
   color: #fff;
-  padding: 155px 0 100px;
-  text-align: center;
   line-height: 1.5;
+
+  padding: 155px 0 100px;
+
+  text-align: center;
   &-title{
     font-size: 48px;
     @include f700;
@@ -97,6 +104,7 @@
   &-form{
     max-width: 670px;
     width: 100%;
+
     margin: 0 auto;
     position: relative;
     input{
@@ -109,6 +117,7 @@
 
       padding-left: 25px;
       padding-right: 60px;
+
       box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
       border-radius: 4px;
       &::placeholder{
@@ -148,6 +157,7 @@
   margin-bottom: 60px;
 button{
   padding: 12px 12px;
+
   background-color: #fff;
   color: $bg;
   & + button{
@@ -169,9 +179,10 @@ button{
 .products__item{
   max-width: 442px;
   width: 100%;
-  margin-bottom: 30px;
+
   color: $bg;
   box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+  margin-bottom: 30px;
   &-img{
     min-height: 250px;
     display: block;
@@ -182,6 +193,7 @@ button{
   }
   &-content{
     min-height: 90px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -198,11 +210,13 @@ button{
   }
   &-title{
     display: block;
+
     line-height: 1.66666;
     font-size: 18px;
   }
   &-category{
     display: block;
+
     font-size: 14px;
     color: $green;
   }
@@ -212,19 +226,24 @@ button{
   }
   &-info{
     min-height: 70px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     padding: 10px 30px;
   }
   &-author{
     max-width: 245px;
+
     display: flex;
     align-items: center;
     .avatar{
       display: inline-block;
+
       width: 30px;
       height: 30px;
+
       margin-right: 14px;
       border-radius: 50%;
 
@@ -282,6 +301,7 @@ button{
       button{
         width: 16px;
         height: 16px;
+
         border-radius: 50%;
         background-color: rgb(232, 232, 232);
         border: none;
@@ -326,25 +346,77 @@ button{
   &-images{
     width: 114px;
     height: 114px;
+
     background-color: #fff;
     border-radius: 50%;
+
     display: flex;
     justify-content: center;
     align-items: center;
+
     margin: 0 auto 30px;
     transition: .2s linear;
   }
   &-title{
     font-size: 24px;
-    margin-bottom: 25px;
     color: #fff;
     @include f500;
+
     transition: .2s linear;
+    margin-bottom: 25px;
   }
   &-text{
     line-height: 1.6;
   }
 }
-
-
 // END ADVANTAGES
+// AUTHOR
+
+.author{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  min-height: 750px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__box{
+    max-width: 650px;
+    width: 100%;
+    min-height: 215px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: $green;
+  }
+  &__title{
+    width: 300px;
+
+    font-size: 28px;
+    line-height: 1.2;
+    color: #fff;
+
+    margin-right: 45px;
+    span{
+      @include f700;
+    }
+  }
+  &__link{
+    font-size: 18px;
+    line-height: 2;
+
+    padding: 15px 40px;
+    background-color: #fff;
+
+    transition: .2s linear;
+    &:hover{
+      background-color: $bg;
+      color: #fff;
+    }
+  }
+}
+// END AUTHOR
