--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -453,6 +453,178 @@ button{
 // END TUTORIAL
 // FOOTER
 
+.footer{
+  background-color: $bg;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
 
+    padding: 100px 0 80px;
+  }
+}
+
+.footer__copy{
+  border-top: 1px solid #424d53;
+}
+
+.footer__copy-text{
+  text-align-last: center;
+  color: #919699;
+  padding: 25px 0 25px;
+}
+
+.footer__col{
+  max-width: 270px;
+  width: 100%;
+  &-menu{
+    max-width: 220px;
+  }
+  &-title{
+    position: relative;
+
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.2;
+    color: #fff;
+
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    &::after{
+      content: '';
+      position: absolute;
+      width: 51px;
+      height: 3px;
+      left: 2px;
+      bottom: 0;
+      background-color: $green;
+    }
+  }
+  &-text{
+    line-height: 1.6;
+    color: #b7c3c8;
+    margin-bottom: 30px;
+  }
+}
+
+.footer__info{
+  margin-top: 18px;
+  padding-left: 30px;
+
+  font-size: 14px;
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+
+  position: relative;
+  &::before{
+    content: "\f041";
+    font-family: 'icomoon';
+    color: $green;
+    font-size: 18px;
+    position: absolute;
+    left: 0;
+    top: -3px;
+  }
+  &-phone{
+    &::before{
+      content: "\f095";
+    }
+  }
+}
+
+.footer__col-list{
+  li{
+    margin-bottom: 15px;
+  }
+  a{
+    color: #b7c3c8;
+    padding-left: 22px;
+    position: relative;
+    &::before{
+      content: "\f105";
+      font-family: 'icomoon';
+      color: $green;
+      font-size: 18px;
+
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+  }
+}
+
+.footer__social-link{
+  margin-bottom: 33px;
+  li{
+    display: inline-block;
+    & + li{
+      margin-left: 7px;
+    }
+  }
+  a{
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  background-image: url(../images/social/css_sprites.png);
+  }
+}
+
+.link-tweeter{
+  background-position: -28px 0;
+}
+.link-youtube{
+  background-position: 0 -28px;
+}
+.link-pinterest{
+  background-position: -28px -28px;
+}
+.link-linkedin{
+  background-position: -56px 0;
+}
+
+.footer__form-title{
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 15px;
+}
+
+.footer__form{
+  position: relative;
+  input{
+    display: block;
+    width: 100%;
+    height: 40px;
+
+    color: #fff;
+    background-color: #2f3c43;
+
+    font-size: 14px;
+
+    padding-left: 13px;
+    padding-right: 50px;
+    &::placeholder{
+      color: #697378;
+    }
+  }
+  button{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: $green;
+    height: 40px;
+    width: 43px;
+    &::after{
+      content: "\f124";
+      position: absolute;
+      top: 8px;
+      left: 13px;
+
+      font-size: 20px;
+      font-family: 'icomoon';
+      color: #fff;
+    }
+  }
+}
 
 // END FOOTER
