--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -49,6 +49,24 @@ body{
   color: $text;
 }
 
+// Прижать футер
+html,
+body{
+	height: 100%;
+}
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.content {
+	flex: 1 0 auto;
+}
+.footer {
+  flex: 0 0 auto;
+}
+// /Прижать футер
+
 a{
   color: $text;
   }
@@ -71,6 +89,13 @@ a{
   }
 }
 
+.header{
+  background-color: #fff;
+}
+.page-content{
+  background-color: $gray;
+}
+
 .title{
   text-align: center;
   margin-bottom: 30px;
@@ -84,3 +109,34 @@ a{
   display: inline-block;
   margin-right: 13px;
 }
+
+// Хлебные крошки
+.breadcrumbs{
+  &__inner{
+    padding: 45px 0 40px;
+  }
+  &__list{
+    li{
+      display: inline-block;
+      position: relative;
+      & + li{  
+        padding-left: 24px;
+        &::before{
+          content: '-';
+          position: absolute;
+          left: 8px;
+          color: $green;
+        }
+      }
+      &:last-child{
+        a,span{
+          color: $bg;
+        }
+      }
+    }
+  }
+  a{
+    color: #b0bec5;
+  }
+}
+// /Хлебные крошки
