--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -32,8 +32,10 @@ html,body{
 input,button,textarea{font-family: inherit;}
 
 input::-ms-clear{display: none;}
+input:focus{outline: none;}
 button{cursor: pointer;}
 button::-moz-focus-inner {padding:0;border:0;}
+button:focus{outline: none;}
 a, a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
