--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,10 +4,17 @@ $green: #8bc34a;
 $bg: #263238;
 $bgi: #b5b5b5;
 $gray: #f4f6f5;
+$yellow: #fcb322;
+$tomato: #ef6c00;
 
 @mixin f500 {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
+}
+
+@mixin f600 {
+  font-family: 'Open-Sans', sans-serif;
+  font-weight: 600;
 }
 
 @mixin f700 {
