--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -59,7 +59,9 @@ body{
 .wrapper {
 	display: flex;
 	flex-direction: column;
-	min-height: 100%;
+  min-height: 100%;
+  position: relative;
+  overflow: hidden;
 }
 .content {
 	flex: 1 0 auto;
