--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,7 +22,7 @@
 }
 //  BTN header
 .header__btn{
-  width: 100px;
+  width: 80px;
 
   font-size: 12px;
   line-height: 2;
@@ -44,13 +44,13 @@
   margin-left: 7px;
 }
 
-.header__btn-login--off{
+.header__btn--off{
   display: none;
 }
 
 .header__btn-logout{
   display: none;
-  &.header__btn-login--on{
+  &.header__btn--on{
     display: block;
   }
 }
@@ -134,6 +134,7 @@
 }
 
 .basket{
+  margin-right: 20px;
   span{
     background-color: $green;
   }
@@ -181,9 +182,10 @@
   background-color: #fff;
   height: 0;
   overflow: hidden;
+  z-index: 1;
 }
 
-.busket__box,
+.basket__box,
 .message__box,
 .notification__box{
   margin-top: 53px;
@@ -206,7 +208,6 @@
 }
 
 .user__box{
-  margin-left: 20px;
   margin-right: 25px;
   padding-right: 20px;
   position: relative;
@@ -286,14 +287,14 @@
   color: #707070;
 }
 
-.busket__sum {
+.basket__sum {
   padding: 16px 17px 12px;
   border: 1px solid #e0e0e0;
   border-top: none;
   background-color: #fff;
 }
 
-.busket__title{
+.basket__title{
   display: flex;
   justify-content: space-between;
   padding-left: 13px;
@@ -304,7 +305,7 @@
   color: $bg;
 }
 
-.busket__btn{
+.basket__btn{
   font-size: 13px;
   color: #fff;
   @include f700;
@@ -314,7 +315,7 @@
   width: 100px;
 }
 
-.busket__btn-chekout{
+.basket__btn-chekout{
   width: 120px;
   margin-left: 6px;
   background-color: $tomato;
@@ -337,6 +338,10 @@
   color: $tomato;
 }
 
+.header__btn-menu,
+.menu__btn{
+  display: none;
+}
 
 // END HEADER
 // SEARCH
@@ -747,7 +752,7 @@ button{
 }
 
 .footer__copy-text{
-  text-align-last: center;
+  text-align: center;
   color: #919699;
   padding: 25px 0 25px;
 }
