--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -49,6 +49,7 @@ body{
   font-size: 15px;
   line-height: 1.6;
   color: $text;
+  background-color: #f4f6f5;
 }
 
 // Прижать футер
@@ -64,7 +65,7 @@ body{
   overflow: hidden;
 }
 .content {
-	flex: 1 0 auto;
+  flex: 1 0 auto;
 }
 .footer {
   flex: 0 0 auto;
@@ -155,6 +156,7 @@ a{
     font-size: 15px;
     font-family: 'icomoon';
     left: 0;
+    top: -3px;
     color: $green;
   }
 }
