--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1248,6 +1248,216 @@ button.icon-unsorted{
   }
 }
 // END products page content
+// PRODUCT-ONE
+
+.product-one {
+  padding-bottom: 100px;
+}
+
+.product-one__inner {
+  display: flex;
+}
+.product-one__content {
+  max-width: 870px;
+  margin-right: 31px;
+}
+
+.product-one__images-bg{
+  background-color: #fff;
+  border: 1px solid #dcdcdc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0;
+}
+
+.product-one__images{
+  max-width: 829px;
+  width: 100%;
+  height: 422px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.product-one__title {
+  font-size: 30px;
+  line-height: 1.33333;
+  color: $bg;
+  @include f500;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.product-one__text {
+  font-size: 16px;
+  color: #707070;
+  margin-bottom: 35px;
+  margin-top: 20px;
+}
+.product-one__box {
+  margin-bottom: 55px;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.product-one__link {
+  a{
+    padding: 14px 7px;
+    width: 150px;
+    color: $gray;
+    font-size: 16px;
+    & + a{
+    margin-left: 20px;
+    }
+  }
+}
+.live{
+  background-color: $red;
+}
+.screenshot{
+  background-color: $green;
+}
+.documentation{
+  background-color: #455a64;
+}
+
+.product-one__social {
+  a{
+    width: 54px;
+    height: 50px;
+    position: relative;
+    & + a{
+      margin-right: 3px;
+    }
+    &::before{
+      font-size: 18px;
+      color: #fff;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+.icon-facebook {
+  background-color: #6370b6;
+}
+.icon-twitter {
+  background-color: #64b5f6;
+}
+.icon-linkedin {
+  background-color: #4f71ce;
+}
+.icon-pinterest-p {
+  background-color: #d32f2f;
+}
+
+
+.tabs{
+  display: flex;
+  text-align: center;
+  border: 1px solid #d7d7d7;
+  .tab{
+    font-size: 16px;
+    color: #70838d;
+    width: 100%;
+    padding: 20px 0;
+    background-color: #fff;
+    cursor: pointer;
+    & + .tab{
+      border-left: 1px solid #d7d7d7;
+    }
+  }
+}
+
+.tab_content{
+  background-color: #fff;
+  border: 1px solid #d7d7d7;
+  border-top: none;
+  padding: 30px 30px 50px;
+}
+
+.tab-item{
+  display: none;
+  &:first-child{
+    display: block;
+  }
+}
+
+.tab-item__list{
+  font-size: 16px;
+  line-height: 2.25;
+  color: #707070;
+  column-count: 2;
+  li{
+    max-width: 270px;
+    width: 100%;
+  }
+}
+
+.product-one__more{
+  margin-top: 55px;
+}
+
+.product-one__more-title {
+  font-size: 18px;
+  @include f500;
+  color: $bg;
+  padding: 18px 25px;
+  background-color: #fff;
+  border: 1px solid #dcdcdc;
+  margin-bottom: 28px;
+}
+
+.product-one__more-icons {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.thumbnail {
+  width: 100%;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 27px;
+  max-width: 270px;
+  background-color: #fff;
+  box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+}
+
+.thumbnail__images {
+  width: 100px;
+  height: 90px;
+  margin-right: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.thumbnail__info {
+
+}
+.thumbnail-name {
+  font-size: 14px;
+  @include f500;
+  color: $bg;
+}
+.thumbnail-thema {
+  font-size: 12px;
+  color: $green;
+}
+
+.thumbnail-price {
+  font-size: 18px;
+  @include f700;
+}
+
+.product-one__aside {
+}
+// /.PRODUCT-ONE
 
 // Media
 @import 'media';
