aded product-one page aside

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1437,9 +1437,6 @@ button.icon-unsorted{
   background-position: center;
 }
 
-.thumbnail__info {
-
-}
 .thumbnail-name {
   font-size: 14px;
   @include f500;
@@ -1457,7 +1454,165 @@ button.icon-unsorted{
 
 .product-one__aside {
 }
-// /.PRODUCT-ONE
+// END PRODUCT-ONE
+// PRODUCT-ONE ASIDE
+
+.product-one__aside {
+  
+}
+.aside__item {
+}
+.aside__title {
+}
+
+.price__box{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.price__product {
+  font-size: 22px;
+  @include f500;
+  color: $red;
+}
+
+.product__price{
+  button{
+    margin-bottom: 7px;
+    box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+    background-color: $green;
+    color: #fff;
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif !important;
+    font-size: 16px;
+    display: block;
+    text-align: center;
+    padding: 17px 5px 15px;
+    width: 100%;
+    background-color: $text;
+    &::before{
+      font-weight: 400;
+      font-family: 'icomoon';
+      padding-right: 8px;
+    }
+  }
+  .icon-shopping-cart{
+    background-color: $green;
+  }
+  .icon-heart-o{
+    background-color: #42a5f5;
+  }
+}
+
+.product-autor__box {
+  padding: 25px 0;
+  display: flex;
+}
+
+.autor__avatar {
+  margin-right: 14px;
+}
+
+.autor__info {
+
+}
+
+.autor__name {
+  font-size: 18px;
+  color: $bg;
+  margin-bottom: 2px;
+}
+
+.autor__link {
+  font-size: 13px;
+  color: #707070;
+  padding: 6px 9px 5px;
+  border: 1px solid #d6d6d6;
+}
+.autor__awords-list {
+  li{
+    display: inline-block;
+    text-align: center;
+    font-size: 20px;
+    position: relative;
+    color: #fff;
+    &::before{
+      position: absolute;
+      top: 6px;
+      left: 0;
+      right: 0;
+    }
+    & + li{
+      margin-left:4px;
+    }
+  }
+}
+
+.icon-meh-o {
+  background-image: url(../images/awords/orange.png);
+  width: 34px;
+  height: 37px;
+}
+.icon-pagelines {
+  background-image: url(../images/awords/red.png);
+  width: 34px;
+  height: 37px;
+}
+.icon-flash {
+  background-image: url(../images/awords/blue.png);
+  width: 34px;
+  height: 37px;
+}
+.icon-foursquare {
+  background-image: url(../images/awords/green.png);
+  width: 34px;
+  height: 37px;
+}
+.icon-yen {
+  background-image: url(../images/awords/gray.png);
+  width: 34px;
+  height: 37px;
+}
+
+
+.aside__item-sales {
+  padding-top: 23px;
+  font-size: 16px;
+  @include f300;
+  color: #707070;
+  span{
+    font-size: 20px;
+    @include f700;
+    color: #263238;
+    padding-right: 13px;
+    &::before{
+      content: "\f07a";
+      font-size: 20px;
+      font-family: 'icomoon';
+      color: #a6b5bb;
+      padding-right: 20px;
+    }
+  }
+}
+
+.aside__item.sales {
+  padding-bottom: 25px;
+}
+
+.aside__info-line {
+  font-size: 14px;
+  line-height: 1.2;
+  color: #70838d;
+  margin-top: 20px;
+  span{
+    color: $bg;
+    @include f500;
+  }
+}
+
+// END PRODUCT-ONE ASIDE
 
 // Media
 @import 'media';
