--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -344,6 +344,106 @@
 }
 
 // END HEADER
+// MODAL
+#modal{
+  background-color: $green;
+  max-width: 730px;
+  width: 100%;
+  padding-top: 90px;
+  padding-bottom: 100px;
+}
+
+.login__title{
+  text-align: center;
+  font-size: 48px;
+  @include f700;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+}
+
+.login__wrapper{
+  form{
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  label{
+    position: relative;
+    display: block;
+    width: 100%;
+    &::before{
+      position: absolute;
+      font-family: 'icomoon';
+      color: #fff;
+      font-size: 14px;
+      left: 18px;
+      top: 11px;
+    }
+  }
+  .login__label-name::before{
+    content: "\f007";
+  }
+  
+  .login__label-pass::before{
+    content: "\f023";
+  }
+  input{
+    height: 43px;
+    margin-bottom: 8px;
+    background-color: #76ae36;
+    color: #fff;
+    font-size: 14px;
+    padding-left: 40px;
+    display: block;
+    width: 100%;
+    &::placeholder{
+      font-size: 14px;
+      color: #fff;
+    }
+  }
+  button{
+    margin-top: 19px;
+    margin-right: 10px;
+    padding: 18px 0 16px;
+    background-color: #fff;
+    width: 140px;
+    text-transform: uppercase;
+    @include f700;
+    color: #000;
+    text-align: center;
+    box-shadow: 0px 2px 2px 0px rgba(118, 174, 54, 0.75);
+    font-size: 14px;
+  }
+}
+
+.lost-pass{
+  display: block;
+  margin-top: 20px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.create__acc{
+  padding: 10px 0 13px;
+  text-align: center;
+  width: 245px;
+  background-color: #76ae36;
+  font-size: 18px;
+  position: relative;
+  color: #fff;
+  &::before{
+    content: "\f044";
+    font-family: 'icomoon';
+    position: absolute;
+    left: 35px;
+    top: 10px;
+  }
+}
+
+.fancybox-button svg{
+  color: #fff;
+}
+// END MODAL
 // SEARCH
 
 .search{
