--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1714,13 +1714,15 @@ button.icon-unsorted{
 // END PRODUCT-ONE ASIDE
 // 404
 
-.page-404__wrapper {
+.page-404__wrapper,
+.about__wrapper {
   border: 1px solid #dcdcdc;
   background-color: #fff;
   margin-bottom: 150px;
 }
 
-.page-404__head {
+.page-404__head,
+.about__head{
   font-size: 24px;
   color: #444;
   @include f500;
@@ -1783,6 +1785,25 @@ button.icon-unsorted{
   color: #fff;
 }
 // END 404
+//  ABOUT
+.about__inner{
+  padding: 0 50px;
+}
+
+.about__box{
+  h3{
+    font-size: 20px;
+    @include f700;
+    color: #444;
+    margin-top: 40px;
+    margin-bottom: 15px;
+  }
+  p{
+    margin-bottom: 40px;
+  }
+}
+
+// END ABOUT
 
 // Media
 @import 'media';
