--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1908,8 +1908,107 @@ button.icon-unsorted{
   justify-content: space-between;
 
 }
-
 // END CONTACT
+
+// SETTINGS
+
+.settings{
+  padding-bottom: 100px;
+}
+
+.product-one__tabs.settings__tabs{
+  display: flex;
+  .tabs{
+    max-width: 280px;
+    width: 100%;
+    height: 100%;
+    margin-right: 30px;
+    text-align: left;
+    display: block;
+    span{
+      display: block;
+      background-color: #fff;
+      border-bottom: #dedede;
+      padding: 17px 17px 17px 50px;
+      color: #707070;
+      font-size: 14px;
+      @include f500;
+      &.active{
+        border-bottom: 1px solid $green;
+        color: #37474f;
+        &::before{
+          color: $green;
+        }
+      }
+      &::before{
+        left: 24px;
+        top: 15px;
+        color: #444;
+      }
+    }
+  }
+}
+
+.tabs .tab + .tab{
+    border-left: none;
+}
+
+.tab_content{
+  width: 100%;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.page__box{
+  background-color: #fff;
+  border: 1px solid #dedede;
+  min-height: 100%;
+}
+
+.page__box-title{
+  padding: 18px 34px;
+  font-size: 24px;
+  @include f500;
+  color: $bg;
+  border-bottom: 1px solid #dedede;
+}
+
+.page__box-content{
+  padding: 30px 35px 80px;
+}
+
+.settings__line{
+  margin-bottom: 21px;
+  display: flex;
+  align-items: center;
+  label{
+    width: 260px;
+    color: #444;
+  }
+  input{
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    background-color: #f9f9f9;
+    color: #000;
+    border: 1px solid #dedede;
+    padding: 0px 10px;
+  }
+  select{
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    background-color: #f9f9f9;
+    color: #000;
+    border: 1px solid #dedede;
+    padding: 0px 10px;
+    color: #707070;
+  }
+}
+
+
+// END SETTINGS
 
 // Media
 @import 'media';
