--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -928,8 +928,8 @@ button{
   }
 }
 
-.footer__social-link{
-  margin-bottom: 33px;
+.social__icons{
+  margin-bottom: 30px;
   li{
     display: inline-block;
     & + li{
@@ -939,6 +939,7 @@ button{
   a{
   width: 28px;
   height: 28px;
+  border-radius: 2px;
   background-image: url(../images/social/css_sprites.png);
   }
 }
@@ -1920,7 +1921,7 @@ button.icon-unsorted{
 .product-one__tabs.settings__tabs{
   display: flex;
   .tabs{
-    max-width: 280px;
+    max-width: 270px;
     width: 100%;
     height: 100%;
     margin-right: 30px;
@@ -2009,9 +2010,207 @@ button.icon-unsorted{
     color: #707070;
   }
 }
-
-
 // END SETTINGS
+// PROFILE
+
+.profile__inner{
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.profile__aside{
+  margin-right: 30px;
+  max-width: 270px;
+  width: 100%;
+}
+
+.profile__content{
+  width: 100%;
+}
+
+.profile__status{
+  border: 1px solid #d6d6d6;
+  color: #707070;
+  padding: 6px 9px 5px 30px;
+  position: relative;
+  &::before{
+    position: absolute;
+    content: '';
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    top: 13px;
+    left: 12px;
+  }
+}
+
+.profile--on{
+  &::before{
+    background-color: $green;
+  }
+}
+
+.profile--off{
+  &::before{
+    background-color: $red;
+  }  
+}
+
+.profile__aside-btn{
+  margin-bottom: 13px;
+  font-size: 16px;
+  text-align: center;
+}
+
+.profile__aside-message {
+  margin-bottom: 17px;
+  display: block;
+  width: 100%;
+  @include f500;
+  background-color: $text;
+  box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, .75);
+  color: #fff;
+  padding: 18px 10px;
+  position: relative;
+  &::before{
+    content: "\f003";
+    position: absolute;
+    font-family: 'icomoon';
+    left: 50px;
+    top: 18px;
+  }
+}
+
+.profile__aside-following {
+  display: block;
+  width: 100%;
+  @include f700;
+  background-color: $green;
+  box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, .75);
+  color: #fff;
+  padding: 18px 10px;
+}
+
+.profile__banner {
+  padding: 20px;
+  border: 1px solid #dedede;
+  margin-bottom: 40px;
+}
+
+.profile__banner-images {
+  min-height: 332px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+.profile__items{
+  display: flex;
+  border: 1px solid #dedede;
+}
+
+.profile__item {
+  width: 25%;
+  background-color: #fff;
+  text-align: center;
+  padding: 22px 5px;
+  & + &{
+    border-left: 1px solid #dedede;
+  }
+}
+
+.profile__item-title {
+  font-size: 14px;
+  color: $bg;
+  @include f500;
+}
+
+.profile__item-info {
+  font-size: 14px;
+  color: #707070;
+  @include f500;
+  &.profile__item-sales{
+    color: $bg;
+  }
+}
+
+.personal-box{
+  background-color: #fff;
+  padding: 35px 40px 25px;
+  border: 1px solid #dedede;
+}
+
+.personal-box__title {
+  margin-bottom: 25px;
+  @include f500;
+  color: $bg;
+  font-size: 20px;
+}
+
+.personal-box__text {
+  margin-bottom: 20px;
+  p{
+  color: #707070;
+  }
+}
+
+.personal-box__head {
+  display: flex;
+  justify-content: space-between;
+}
+
+.personal-box__item-name {
+  margin-bottom: 16px;
+  @include f500;
+  font-size: 16px;
+  color: $bg;
+  font-style: italic;
+}
+
+.personal-box__item-number {
+  margin-bottom: 16px;
+  @include f700;
+  font-size: 16px;
+  color: $bg;
+}
+
+.personal-box__item-line {
+  background-color: #f4f4f4;
+  height: 15px;
+  border-radius: 3px;
+  margin-bottom: 23px;
+  span{
+    display: block;
+    height: 15px;
+    border-radius: 3px;
+    background-color: #000;
+    background-image: url(../images/content/progress-bar.jpg);
+    background-repeat: repeat;
+  }
+}
+
+.profile-settings{
+  .product-one__tabs.settings__tabs{
+    .tabs span{
+      font-family: 'Roboto', sans-serif;
+      font-weight: 500;
+      color: #707070;
+      position: relative;
+      &.active::before{
+        color: $green;
+      }
+      &::before{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'icomoon';
+        left: 25px;
+        top: 16px;
+        color: #d0d0d0;
+      }
+    }
+  }
+}
+//  END PROFILE
 
 // Media
 @import 'media';
