--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -55,14 +55,14 @@ body{
 // Прижать футер
 html,
 body{
-	height: 100%;
+  height: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 .wrapper {
 	display: flex;
 	flex-direction: column;
   min-height: 100%;
-  position: relative;
-  overflow: hidden;
 }
 .content {
   flex: 1 0 auto;
