--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1562,7 +1562,65 @@ button.icon-unsorted{
   justify-content: space-between;
   align-items: center;
   padding: 30px 0;
+  .jq-selectbox__select {
+    height: 27px;
+    width: auto;
+    padding: 7px 29px 7px 9px;
+    border: 1px solid #d5d5d5;
+    border-bottom-color: #d5d5d5;
+    border-radius: 0px;
+    background: none;
+    box-shadow: none;
+    font-family: 'Roboto-Regular', sans-serif;
+    color: #70838d;
+    text-shadow: none;
+    font-size: 13px;
+    line-height: 13px;
+    &:hover{
+      background: none;
+    }
+  }
+  .jq-selectbox__trigger {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    border-left: none;
+  }
+  .jq-selectbox__trigger-arrow {
+    position: absolute;
+    top: 12px;
+    right: 7px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    &::before{
+      font-family: 'icomoon';
+      content: "\f0d7";
+      position: absolute;
+      top: -5px;
+      right: 3px;
+      color: $green;
+      font-size: 13px;
+    }
+  }
+  .jq-selectbox__dropdown {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0 0 0;
+  padding: 0;
+  border: 1px solid #d5d5d5;
+  border-radius: 0px;
+  background: #FFF;
+  box-shadow: none;
+  font-family: 'Roboto-Regular', sans-serif;
+  }
 }
+
+
+
+
+  
 
 .price__product {
   font-size: 22px;
@@ -2008,6 +2066,59 @@ button.icon-unsorted{
     border: 1px solid #dedede;
     padding: 0px 10px;
     color: #707070;
+  }
+  .jq-selectbox__select {
+    height: 27px;
+    width: auto;
+    padding: 7px 29px 7px 9px;
+    border: 1px solid #d5d5d5;
+    border-bottom-color: #d5d5d5;
+    border-radius: 0px;
+    background: none;
+    box-shadow: none;
+    font-family: 'Roboto-Regular', sans-serif;
+    color: #70838d;
+    text-shadow: none;
+    font-size: 13px;
+    line-height: 13px;
+    &:hover{
+      background: none;
+    }
+  }
+  .jq-selectbox__trigger {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    border-left: none;
+  }
+  .jq-selectbox__trigger-arrow {
+    position: absolute;
+    top: 12px;
+    right: 7px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    &::before{
+      font-family: 'icomoon';
+      content: "\f0d7";
+      position: absolute;
+      top: -5px;
+      right: 3px;
+      color: $green;
+      font-size: 13px;
+    }
+  }
+  .jq-selectbox__dropdown {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0 0 0;
+  padding: 0;
+  border: 1px solid #d5d5d5;
+  border-radius: 0px;
+  background: #FFF;
+  box-shadow: none;
+  font-family: 'Roboto-Regular', sans-serif;
   }
 }
 // END SETTINGS
