--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -317,7 +317,6 @@
 }
 
 .basket__btn-chekout{
-  width: 120px;
   margin-left: 6px;
   background-color: $tomato;
 }
@@ -352,6 +351,7 @@
   width: 100%;
   padding-top: 90px;
   padding-bottom: 100px;
+  display: none;
 }
 
 .login__title{
@@ -2362,9 +2362,6 @@ button.icon-unsorted{
     span{
       color: $green;
     }
-    &::placeholder{
-      color: #707070;
-    }
   }
   select,
   input,
@@ -2375,6 +2372,9 @@ button.icon-unsorted{
     height: 40px;
     background-color: #f9f9f9;
     padding: 0 18px;
+    &::placeholder{
+      color: #707070;
+    }
   }
   textarea{
     resize: none;
@@ -2419,9 +2419,6 @@ button.icon-unsorted{
     border: 1px solid #d7d7d7;
     border-bottom-color: #d7d7d7;
     padding: 0 18px;
-    &.focused{
-      display: none;
-    }
   }
   .jq-file__name {
     width: 100%;
@@ -2453,8 +2450,153 @@ button.icon-unsorted{
     text-shadow: none;
   }
 }
-
 // END UPLOAD
+// WITHDRAWALS
 
+.withdrawals__inner {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+}
+
+.withdrawals__col {
+  max-width: 570px;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border: 1px solid #dedede;
+}
+
+.withdrawals__title {
+  font-size: 24px;
+  @include f500;
+  color: $bg;
+  padding: 18px 32px 24px;
+  border-bottom: 1px solid #dedede;
+  margin-bottom: 30px;
+}
+
+.withdrawals__content {
+  padding-left: 35px;
+  padding-right: 40px;
+  button{
+    margin-bottom: 50px;
+    color: #fff;
+    background-color: $green;
+    padding: 15px 36px;
+  }
+}
+
+.withdrawals__form-line {
+  margin-bottom: 25px;
+  label{
+    display: block;
+    width: 100%;
+    @include f500;
+    font-size: 16px;
+    margin-bottom: 15px;
+    color: $bg;
+  }
+  span{
+    color: $green;
+  }
+  input,
+  select{
+    display: block;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #d7d7d7;
+    background-color: #f9f9f9;
+    padding: 0px 18px;
+    &::placeholder{
+      color: #707070;
+    }
+  }
+  .jq-selectbox{
+    width: 100%;
+  }
+  .jq-selectbox__select {
+    height: 40px;
+    padding: 0 18px;
+    border: 1px solid #d7d7d7;
+    border-bottom-color: #d7d7d7;
+    border-radius: 0px;
+    background: #f9f9f9;
+    box-shadow: none;
+    font-family: 'Roboto-Regular', sans-serif;
+    line-height: 40px;
+    color: #707070;
+    text-shadow: none;
+  }
+  .jq-selectbox__trigger-arrow{
+    border: none;
+    top: 0;
+    right: 20px;
+    line-height: 40px;
+    font-size: 15px;
+    &::before{
+      font-family: 'icomoon';
+      content: "\f0d7";
+    }
+  }
+  .jq-selectbox__trigger{
+    border-left: none;
+  }
+}
+
+.withdrawals-content-items {
+  padding-bottom: 35px;
+}
+.withdrawals-content-item {
+  display: flex;
+  align-items: center;
+  height: 42px;
+  font-size: 13px;
+  color: #444;
+  &:nth-child(odd){
+    background-color: #f9f9f9;
+  }
+}
+
+.withdrawals-content-date {
+  width: 154px;
+  padding-left: 20px;
+  @include f500;
+}
+
+.withdrawals-content-mail {
+  width: 180px;
+  @include f500;
+}
+
+.withdrawals-content-price {
+  width: 70px;
+  @include f700;
+}
+
+.withdrawals-content-status {
+  @include f500;
+  &.withdrawals-content-paid{
+    color: $green;
+  }
+}
+//  END WITHDRAWALS
+
+
+
+
+
+// jq-form-styler
+.jq-file:hover .jq-file__browse {
+	background: none;
+}
+.jq-file:active .jq-file__browse {
+	background: none;
+	box-shadow: none;
+}
+.jq-file.focused .jq-file__name {
+	border: none;
+}
+// jq-form-styler
 // Media
 @import 'media';
