--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -142,8 +142,8 @@
 
 .user{
   position: relative;
-  height: 90px;
-  margin-top: 40px;
+  margin-top: 20px;
+  padding-bottom: 25px;
   &:hover{
     .user__menu{
       height: auto;
@@ -162,7 +162,7 @@
   border: 0px solid rgb(204, 204, 204);
   position: absolute;
   top: 70px;
-  left: 20px;
+  left: 0;
   background-color: #fff;
   width: 158px;
   padding: 0 20px;
@@ -189,10 +189,11 @@
 .basket__box,
 .message__box,
 .notification__box{
-  margin-top: 53px;
-  height: 90px;
+  margin-top: 28px;
   position: relative;
-  margin-left: 20px;
+  padding-left: 25px;
+  padding-bottom: 30px;
+
   &:hover{
     .header__circle::before{
       color: $bg;
@@ -204,6 +205,7 @@
     .circle__item{
     padding: 23px;
     border-width: 1px;
+    border-bottom: none;
     }
   }
 }
@@ -291,7 +293,6 @@
 .basket__sum {
   padding: 16px 17px 12px;
   border: 1px solid #e0e0e0;
-  border-top: none;
   background-color: #fff;
 }
 
@@ -351,7 +352,6 @@
   width: 100%;
   padding-top: 90px;
   padding-bottom: 100px;
-  display: none;
 }
 
 .login__title{
@@ -492,10 +492,10 @@
       width: 100%;
       display: block;
 
-      font-size: 14px;
+      font-size: 13px;
       line-height: 2;
 
-      padding-left: 25px;
+      padding-left: 20px;
       padding-right: 60px;
 
       box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
@@ -528,6 +528,12 @@
   background-color: $gray;
 }
 
+.products__wrapper,
+.products-slider__wrapper{
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
 .products__title{
   color: &bg;
 }
@@ -537,7 +543,6 @@
   margin-bottom: 60px;
 button{
   padding: 12px 12px;
-
   background-color: #fff;
   color: $bg;
   & + button{
@@ -552,14 +557,19 @@ button{
 
 .products__inner-box{
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  margin-left: -30px;
   flex-wrap: wrap;
+}
+
+.products .products__item{
+  flex-basis: calc(25% - 30px);
+  margin-left: 30px;
 }
 
 .products__item{
   max-width: 442px;
   width: 100%;
-
   color: $bg;
   box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
   margin-bottom: 30px;
@@ -666,7 +676,7 @@ button{
 // PRODUCTS SLIDER
 
 .product-slider {
-  padding: 110px 0 120px;
+  padding-bottom: 120px;
   .slider__dots{
     margin-top: 50px;
     text-align: center;
@@ -1062,12 +1072,9 @@ button{
     @include f500;
     text-align: center;
     width: 100%;
-    position: relative;
     &::before{
       content: "\f002";
-      position: absolute;
-      top: 15px;
-      left: 58px;
+      padding-right: 20px;
 
       font-size: 15px;
       font-family: 'icomoon';
@@ -1221,11 +1228,13 @@ button.icon-unsorted{
 
 .products-page__items{
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   margin-bottom: 30px;
+  margin-left: -30px;
   .products__item{
-    max-width: 270px;
+    flex-basis: calc(33.33333% - 30px);
+    margin-left: 30px;
     background-color: #fff;
     transition: 0.25s linear;
     &-content{
@@ -1257,6 +1266,7 @@ button.icon-unsorted{
     }
     &.list{
       max-width: 100%;
+      flex-basis: 100%;
       .products__item-img{
         width: 240px;
         min-height: 100%;
@@ -1370,7 +1380,7 @@ button.icon-unsorted{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 16px 0;
+  padding: 16px;
 }
 
 .product-one__images{
@@ -1465,7 +1475,7 @@ button.icon-unsorted{
     font-size: 16px;
     color: #70838d;
     width: 100%;
-    padding: 20px 0;
+    padding: 20px 10px;
     background-color: #fff;
     cursor: pointer;
     & + .tab{
@@ -1492,7 +1502,11 @@ button.icon-unsorted{
   font-size: 16px;
   line-height: 2.25;
   color: #707070;
-  column-count: 2;
+  column-count: 3;
+  border: 1px solid #dedede;
+  border-top: none;
+  background-color: #fff;
+  padding: 20px;
   li{
     max-width: 270px;
     width: 100%;
@@ -1520,12 +1534,12 @@ button.icon-unsorted{
 }
 
 .thumbnail {
+  max-width: 270px;
   width: 100%;
   height: 90px;
   display: flex;
   align-items: center;
   margin-bottom: 27px;
-  max-width: 270px;
   background-color: #fff;
   box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
 }
@@ -2012,7 +2026,6 @@ button.icon-unsorted{
 
 .tabs .tab + .tab{
     border-left: none;
-    
 }
 
 .tab_content{
@@ -2045,7 +2058,7 @@ button.icon-unsorted{
   display: flex;
   align-items: center;
   label{
-    width: 260px;
+    min-width: 260px;
     color: #444;
   }
   input{
@@ -2058,67 +2071,47 @@ button.icon-unsorted{
     padding: 0px 10px;
   }
   select{
-    max-width: 540px;
     width: 100%;
+    display: block;
+    border: 1px solid #d7d7d7;
     height: 40px;
     background-color: #f9f9f9;
-    color: #000;
-    border: 1px solid #dedede;
-    padding: 0px 10px;
-    color: #707070;
-  }
-  .jq-selectbox__select {
-    height: 27px;
-    width: auto;
-    padding: 7px 29px 7px 9px;
-    border: 1px solid #d5d5d5;
-    border-bottom-color: #d5d5d5;
-    border-radius: 0px;
-    background: none;
-    box-shadow: none;
-    font-family: 'Roboto-Regular', sans-serif;
-    color: #70838d;
-    text-shadow: none;
-    font-size: 13px;
-    line-height: 13px;
-    &:hover{
-      background: none;
+    padding: 0 18px;
+    &::placeholder{
+      color: #707070;
     }
   }
-  .jq-selectbox__trigger {
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    border-left: none;
+  .jq-selectbox{
+    width: 100%;
   }
-  .jq-selectbox__trigger-arrow {
-    position: absolute;
-    top: 12px;
-    right: 7px;
-    border-top: none;
-    border-right: none;
-    border-left: none;
+  .jq-selectbox__select {
+    height: 40px;
+    padding: 0 18px;
+    max-width: 540px;
+    width: 100%;
+    border: 1px solid #d7d7d7;
+    border-bottom-color: #d7d7d7;
+    border-radius: 0px;
+    background: #f9f9f9;
+    box-shadow: none;
+    font-family: 'Roboto-Regular', sans-serif;
+    line-height: 40px;
+    color: #707070;
+    text-shadow: none;
+  }
+  .jq-selectbox__trigger-arrow{
+    border: none;
+    top: 0;
+    right: 20px;
+    line-height: 40px;
+    font-size: 15px;
     &::before{
       font-family: 'icomoon';
       content: "\f0d7";
-      position: absolute;
-      top: -5px;
-      right: 3px;
-      color: $green;
-      font-size: 13px;
     }
   }
-  .jq-selectbox__dropdown {
-  box-sizing: border-box;
-  width: 100%;
-  margin: 0 0 0;
-  padding: 0;
-  border: 1px solid #d5d5d5;
-  border-radius: 0px;
-  background: #FFF;
-  box-shadow: none;
-  font-family: 'Roboto-Regular', sans-serif;
+  .jq-selectbox__trigger{
+    border-left: none;
   }
 }
 // END SETTINGS
@@ -2544,10 +2537,10 @@ button.icon-unsorted{
   }
 }
 
-.withdrawals-content-items {
+.withdrawals__content-items {
   padding-bottom: 35px;
 }
-.withdrawals-content-item {
+.withdrawals__content-item {
   display: flex;
   align-items: center;
   height: 42px;
@@ -2558,31 +2551,29 @@ button.icon-unsorted{
   }
 }
 
-.withdrawals-content-date {
+.withdrawals__content-date {
   width: 154px;
   padding-left: 20px;
   @include f500;
 }
 
-.withdrawals-content-mail {
+.withdrawals__content-mail {
   width: 180px;
   @include f500;
 }
 
-.withdrawals-content-price {
+.withdrawals__content-price {
   width: 70px;
   @include f700;
 }
 
-.withdrawals-content-status {
+.withdrawals__content-status {
   @include f500;
-  &.withdrawals-content-paid{
+  &.withdrawals__content-paid{
     color: $green;
   }
 }
 //  END WITHDRAWALS
-
-
 
 
 
